<resources>
    <string name="app_name">Calculator</string>
    <string name="title_activity_my_second">MySecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_button">Delete Button</string>
    <string name="zero">0</string>
    <string name="negative_positive">+/-</string>
    <string name="dot">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="equals">=</string>
    <string name="percentage">%</string>
    <string name="ce">CE</string>
    <string name="delete">C</string>
    <string name="divide_one">1/x</string>
    <string name="pow">^</string>
    <string name="root">√</string>
    <string name="slash">/</string>
    <string name="x_symbol">x</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
</resources>